--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <a-box id="position-guide" visible="false" position="0 0 -2"></a-box>
   </a-entity>
 </a-scene>
+  <p>hjgjhgjhgjhgjh</p>
 </body>
 <html>
