--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <html>
 <head>
-  <title>App</title>
-
-<script src="https://aframe.io/releases/0.5.0/aframe.min.js">
-</script>
-<script src="https://rawgit.com/chenzlabs/aframe-daydream-controller-component/master/dist/aframe-daydream-controller-component.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/examples/vendor/aframe/build/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+    <script src="//cdn.rawgit.com/donmccurdy/aframe-extras/v3.13.1/dist/aframe-extras.min.js"></script>
 </head>
+<body onload="LoadAnimation()">
+    <a-scene>
 
-<body>
-  <p>kjehkjshdfkl</p>
+        <a-box id="boxID" position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9">
+            <a-animation begin="AnimateBox" attribute="rotation" from="0 45 0" to="0 180 0"></a-animation>
+        </a-box>
+
+        <a-sphere id="sphareID" position="0 1.25 -5" radius="1.25" color="#EF2DSE">
+            <a-animation begin="AnimateSphare" attribute="position" from="0 1.25 -5" to="0 1.25 -10"></a-animation>
+        </a-sphere>
+
+        <a-cylinder id="cylinderID" position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" scale="1 1 1">
+            <a-animation begin="AnimateCylinder" attribute="scale" from="1 1 1" to="0.5 0.5 0.5"></a-animation>
+        </a-cylinder>
+        <!--<a-animate begin="Anim" attribute="position"></a-animate>-->
+    </a-scene>
 </body>
-<html>
+</html>
+
+<script>
+    window.onload = function LoadAnimation() {
+        var boxAnimation = document.getElementById('boxID');
+        var sphareAnimation = document.getElementById('sphareID');
+        var cylinderAnimation = document.getElementById('cylinderID');
+
+        boxAnimation.emit('AnimateBox');
+        sphareAnimation.emit('AnimateSphare');
+        cylinderAnimation.emit('AnimateCylinder');
+    }
+</script>
